# cmake-init-fetchcontent

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: install-config.cmake.in  install-rules.cmake  variables.cmake
cmake/find/: Findheaderonly.cmake
include/fetchcontent/: fetchcontent.hpp
test/: CMakeLists.txt
test/source/: fetchcontent_test.cpp
